# note67

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: release.yml
e2e/: README.md  onboarding.spec.ts
e2e/support/: tauri-mock.ts
scripts/: bump-version.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  meeting_detection.rs
src-tauri/src/ai/: mod.rs  ollama.rs  prompts.rs
src-tauri/src/audio/: aec.rs  converter.rs  macos.rs  mixer.rs  mod.rs  recorder.rs  system_audio.rs  windows.rs
src-tauri/src/commands/: ai.rs  audio.rs  export.rs  graph.rs  images.rs  links.rs  meetings.rs  mod.rs  notes.rs  settings.rs  tags.rs  transcription.rs  upload.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/transcription/: live.rs  mod.rs  model.rs  transcriber.rs
src/api/: ai.ts  audio.ts  export.ts  graph.ts  index.ts  links.ts  meetings.ts  notes.ts  tags.ts  tasks.ts  transcription.ts  upload.ts
src/components/: AISidebar.tsx  ActionsTab.tsx  AudioFilesList.tsx  AudioPlayer.tsx  BacklinksPanel.tsx  LinkAutocomplete.tsx  LinkPreview.tsx  Logo.tsx  LogoImage.tsx  MarkdownContent.tsx  MarkdownEditor.tsx  MeetingDetectedPopup.tsx  MeetingEditor.tsx  MeetingSearch.tsx  ModelManager.tsx  NoteEditor.tsx  NoteSearch.tsx  NoteSearchWithTags.tsx  OllamaSettings.tsx  SearchModal.tsx  Settings.tsx  SummaryPanel.tsx  TagAutocomplete.tsx  TagsFilter.tsx  TasksView.tsx  TranscriptSearch.tsx  TranscriptViewer.tsx  UnlinkedMentionsPanel.tsx  UpdateNotification.tsx  UploadedAudioList.tsx  index.ts
src/components/graph/: GraphControls.tsx  GraphNodePreview.tsx  GraphSettingsPanel.tsx  GraphView.tsx  index.ts
src/components/onboarding/: OnboardingWizard.tsx
src/hooks/: index.ts  useAI.ts  useAIWriting.ts  useGraphUpdates.ts  useMeetings.ts  useNotes.ts  useOnboarding.ts  useOpenTasks.ts  useRecording.ts  useSystemStatus.ts  useTranscription.ts  useUpdater.ts  useUploadedAudio.ts
src/plugins/: wikiLinkPlugin.ts
src/stores/: appStore.ts  graphSettingsStore.ts  graphStore.ts  index.ts  linksStore.ts  meetingStore.ts  ollamaStore.ts  profileStore.ts  tagsStore.ts  themeStore.ts  whisperStore.ts
src/styles/: milkdown-theme.css
src/types/: index.ts  meeting.ts  note.ts
src/utils/: imageUploader.ts  parseActionItems.ts  seeder.ts  tagColors.ts
(+17 files in other folders)
