[package]
name = "note67"
version = "0.1.0"
description = "A private, local meeting notes assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "note67_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
cpal = "0.15"
hound = "3.5"
ringbuf = "0.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
