[package]
name = "note67"
version = "0.1.4"
description = "A private, local notes assistant"
authors = ["you"]
edition = "2024"

[lib]
name = "note67_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
cpal = "0.15"
hound = "3.5"
ringbuf = "0.4"
whisper-rs = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
scopeguard = "1.2"

# macOS-specific dependencies for system audio capture via ScreenCaptureKit
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString", "NSArray", "NSDictionary"] }
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMFormatDescription", "CMTime"] }
objc2-core-audio-types = "0.3"
block2 = "0.6"
dispatch = "0.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
